--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -49,7 +49,7 @@
 										<a href="#">Red Internacional</a>
 									</li>
 									<li class="has-dropdown">
-										<a href="#">Operaciones</a>
+										<a href="/Operaciones">Operaciones</a>
 									</li>
 									<li class="has-dropdown">
 										<a href="articulos.html">Artículos</a>
