--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -1,6 +1,6 @@
 @page "/Fenchurch"
 
-<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="FENCHURCH"/>
+<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="Nuestra Misión" CustomSubtitle="Nuestro objetivo es conseguir una solución a medida de las necesidades de nuestro cliente basada en nuestra experiencia en fusiones y adquisiciones"/>
 
 <section class="container p-top p-bottom" id="fenchurch">
     <div class="row">
