incorporacion de fuente Exo2 a fenchurch

--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -1,12 +1,18 @@
 @page "/Fenchurch"
 
-<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="Nuestra Misión" CustomSubtitle="Nuestro objetivo es conseguir una solución a medida de las necesidades de nuestro cliente basada en nuestra experiencia en fusiones y adquisiciones"/>
+<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución a medida de las necesidades de nuestro cliente basada en nuestra experiencia en fusiones y adquisiciones"/>
 
-<section class="container p-top p-bottom" id="fenchurch">
+<style>
+    #fenchurch h1,#fenchurch  h2,#fenchurch  h3,#fenchurch  h4,#fenchurch  h5,#fenchurch  h6 {
+        font-family: 'Exo 2' !important;
+    }
+</style>
+
+<section class="container p-top p-bottom" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
         <div class="col-md-4">
             <div class="m-xl">
-                <h4 class="text-center">
+                <h4>
                     <strong>CLIENTES</strong>
                 </h4>
                 <h4 class="texe-center">
@@ -19,12 +25,13 @@
         </div>
         <div class="col-md-4">
             <div class="m-xl">
-                <h4 class="text-center">
+                <h4>
                     <strong>FUSIONES & ADQUISICIONES</strong>
                 </h4>
                 <h4 class="text-justified">
-                    Estas empresas generalmente tiene una facturación de entre €15 millones y €300
-                    millones.
+                    Fenchurch no hace salidas a bolsa, no gestiona patrimonios,
+no hace préstamos, no hace estudios estratégicos, no audita,
+ni asesora en temas legales o fiscales.
                 </h4>
             </div>
         </div>
@@ -37,8 +44,7 @@
 ejecutadas por un profesional con una extensa experiencia práctica.</h4>
             </div>
         </div>
-
-
-
     </div>
 </section>
+
+<br>
