--- a/Fenchurch/wwwroot/css/style.css
+++ b/Fenchurch/wwwroot/css/style.css
@@ -19,6 +19,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Exo 2';
+  src: url("../fonts/Exo2-VariableFont_wght.ttf");
+}
 /* =======================================================
 *
 * 	Template Style 
