--- a/Fenchurch/Pages/_Host.cshtml
+++ b/Fenchurch/Pages/_Host.cshtml
@@ -35,6 +35,7 @@
 	<!-- <meta name="twitter:card" content="" /> -->
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+	<link href="/fonts/Exo2-VariableFont_wght.ttf" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap"
