--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -2,25 +2,19 @@
 
 <BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución a medida de las necesidades de nuestro cliente basada en nuestra experiencia en fusiones y adquisiciones"/>
 
-<style>
-    #fenchurch h1,#fenchurch  h2,#fenchurch  h3,#fenchurch  h4,#fenchurch  h5,#fenchurch  h6 {
-        font-family: 'Exo 2' !important;
-    }
-</style>
-
-<section class="container p-top p-bottom" id="fenchurch" style="font-family: 'Exo 2' !important">
+<section class="container p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
         <div class="col-md-4">
             <div class="m-xl">
                 <h4>
                     <strong>CLIENTES</strong>
                 </h4>
-                <h4 class="texe-center">
+                <p class="texe-center">
                                         Fenchurch se especializa en asesorar a empresas
                     medianas que quieren ser compradas. Estas empresas
                     generalmente tiene una facturación de entre €15 millones
                     y €300 millones
-                </h4>
+                </p>
             </div>
         </div>
         <div class="col-md-4">
@@ -28,11 +22,14 @@
                 <h4>
                     <strong>FUSIONES & ADQUISICIONES</strong>
                 </h4>
-                <h4 class="text-justified">
+                <p class="text-justified">
                     Fenchurch no hace salidas a bolsa, no gestiona patrimonios,
 no hace préstamos, no hace estudios estratégicos, no audita,
 ni asesora en temas legales o fiscales.
-                </h4>
+                </p>
+                <p>
+Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones
+                </p>
             </div>
         </div>
         <div class="col-md-4">
@@ -40,8 +37,8 @@ ni asesora en temas legales o fiscales.
                 <h4>
                     <strong>NUESTRO ENFOQUE</strong>
                 </h4>
-                <h4>Cada fase del proceso de nuestras operaciones están 
-ejecutadas por un profesional con una extensa experiencia práctica.</h4>
+                <p>Cada fase del proceso de nuestras operaciones están 
+ejecutadas por un profesional con una extensa experiencia práctica.</p>
             </div>
         </div>
     </div>
