--- a/Fenchurch/Pages/OperacionesComponent.razor
+++ b/Fenchurch/Pages/OperacionesComponent.razor
@@ -18,6 +18,9 @@
         display: flex;
         justify-content: center;
     }
+    tr td:first-of-type {
+        font-weight: bolder;
+    }
 </style>
 
 <BootstrapHeroComponent BackgroundImage="isla-pascua" CustomTitle="OPERACIONES"
@@ -30,115 +33,115 @@
                 <table class="tabla-operaciones">
                     <tbody>
                         <tr>
-                            <td>ARTE HISPÁNICO, Toledo</td>
+                            <td>ARTE HISPÁNICO</td>
                             <td>Fabricante de Muebles de Madera</td>
                         </tr>
                         <tr>
-                            <td>BLINKER, Alicante</td>
+                            <td>BLINKER</td>
                             <td>Distribuidor de Productos de Fijación</td>
                         </tr>
                         <tr>
-                            <td>PINMAR, Mallorca</td>
+                            <td>PINMAR</td>
                             <td>Pintado y Mantenimiento de Yates</td>
                         </tr>
                         <tr>
-                            <td>KOIPE, San Sebastián</td>
+                            <td>KOIPE</td>
                             <td>Fabricante de Aceites Vegetales</td>
                         </tr>
                         <tr>
-                            <td>COMPUTER CENTER DOS, Madrid</td>
+                            <td>COMPUTER CENTER DOS</td>
                             <td>Distribuidor de Informática</td>
                         </tr>
                         <tr>
-                            <td>TELEPIZZA, Madrid</td>
+                            <td>TELEPIZZA</td>
                             <td>Comida Rápida</td>
                         </tr>
                         <tr>
-                            <td>HALCÓN FOODS, Murcia</td>
+                            <td>HALCÓN FOODS</td>
                             <td>Conservera de Frutas y Verduras</td>
                         </tr>
                         <tr>
-                            <td>FRIO INDUSTRIAL CEÑO, Albacete</td>
+                            <td>FRIO INDUSTRIAL CEÑO</td>
                             <td>Vegetales Congelados</td>
                         </tr>
                         <tr>
-                            <td>DANISCO, Dinamarca</td>
+                            <td>DANISCO</td>
                             <td>Vegetales Congelados</td>
                         </tr>
                         <tr>
-                            <td>DELMODIS, Belgica</td>
+                            <td>DELMODIS</td>
                             <td>Cadena de Supermercados</td>
                         </tr>
                         <tr>
-                            <td>LA CASERA, Madrid</td>
+                            <td>LA CASERA</td>
                             <td>Fabricante de Bebidas Refrescantes</td>
                         </tr>
                         <tr>
-                            <td>COSMHOGAR, Barcelona</td>
+                            <td>COSMHOGAR</td>
                             <td>Fabricante de Productos de Limpieza y Cosmética</td>
                         </tr>
                         <tr>
-                            <td>GRUPO ALVIC, Barcelona</td>
+                            <td>GRUPO ALVIC</td>
                             <td>Fabricante de Muebles de Cocina</td>
                         </tr>
                         <tr>
-                            <td>MECÁNICA DEL CENTRO, Madrid</td>
+                            <td>MECÁNICA DEL CENTRO</td>
                             <td>Fabricante de Equipos para Acerías</td>
                         </tr>
                         <tr>
-                            <td>SUPERDIPLO, Las Palmas</td>
+                            <td>SUPERDIPLO</td>
                             <td>Cadena de Supermercados</td>
                         </tr>
                         <tr>
-                            <td>INDUSTRIAS ALGA, Bilbao</td>
+                            <td>INDUSTRIAS ALGA</td>
                             <td>Fabricante de Componentes de Automoción</td>
                         </tr>
                         <tr>
-                            <td>MERCAPITAL, Madrid</td>
+                            <td>MERCAPITAL</td>
                             <td>Capital Riesgo</td>
                         </tr>
                         <tr>
-                            <td>VISTA CAPITAL, Madrid</td>
+                            <td>VISTA CAPITAL</td>
                             <td>Capital Riesgo</td>
                         </tr>
                         <tr>
-                            <td>BANCAMERICA EQUITY PARTNERS, Londres</td>
+                            <td>BANCAMERICA EQUITY PARTNERS</td>
                             <td>Capital Riesgo</td>
                         </tr>
                         <tr>
-                            <td>CASH GRANADA, Granada</td>
+                            <td>CASH GRANADA</td>
                             <td>Distribuidor de Productos de Limpieza y Droguería</td>
                         </tr>
                         <tr>
-                            <td>COFEBA, Mallorca </td>
+                            <td>COFEBA</td>
                             <td>Distribuidor de Bebidas</td>
                         </tr>
                         <tr>
-                            <td>LINPAC, Reino Unido</td>
+                            <td>LINPAC</td>
                             <td>Embalaje de Cartón</td>
                         </tr>
                         <tr>
-                            <td>DOMINGO PASCUAL CARBÓ, Girona</td>
+                            <td>DOMINGO PASCUAL CARBÓ</td>
                             <td>Embalaje de Plástico</td>
                         </tr>
                         <tr>
-                            <td>MOVINOR, Navarra</td>
+                            <td>MOVINOR</td>
                             <td>Material de Construcción de Construcción</td>
                         </tr>
                         <tr>
-                            <td>RUGBY GROUP, Reino Unido</td>
+                            <td>RUGBY GROUP</td>
                             <td>Fabricante de Materiales de Construcción</td>
                         </tr>
                         <tr>
-                            <td>SECURIGUARD, Reino Unido</td>
+                            <td>SECURIGUARD</td>
                             <td>Proveedor de Servicios de Seguridad</td>
                         </tr>
                         <tr>
-                            <td>URALITA, Madrid</td>
+                            <td>URALITA</td>
                             <td>Fabricante de Materiales de Construcción</td>
                         </tr>
                         <tr>
-                            <td>BILORE, San Sebastán</td>
+                            <td>BILORE</td>
                             <td>Fabricante de productos de Limpieza</td>
                         </tr>
                     </tbody>
