--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -39,14 +39,18 @@
 									</li>
                                     <li class="has-dropdown">
 										<a href="#">Servicios</a>
+										<ul class="dropdown">
+											<li><a href="/VentaEmpresas">Venta de Empresas</a></li>
+											<li><a href="/CompraEmpresas">Compra de Empresas</a></li>
+										</ul>									
+									</li>
+									<li class="has-dropdown">
+										<a href="#">Red Internacional</a>
 										<!-- <ul class="dropdown">
 										<li><a href="#">Serv 1</a></li>
 										<li><a href="#">Serv 2</a></li>
 										<li><a href="#">Serv 3</a></li>
 									</ul> -->
-									</li>
-									<li class="has-dropdown">
-										<a href="#">Red Internacional</a>
 									</li>
 									<li class="has-dropdown">
 										<a href="/Operaciones">Operaciones</a>
@@ -58,7 +62,7 @@
 										<a href="#">Preguntas</a>
 									</li>
 									<li class="has-dropdown">
-										<a href="#">Contacto</a>
+										<a href="/Contacto">Contacto</a>
 									</li>
 
 									<!-- <li class="btn-cta"><a href="appointment.html"><span>Make an Appointment <i class="icon-calendar3"></i></span></a></li> -->
