--- a/Fenchurch/Pages/CurriculumComponent.razor
+++ b/Fenchurch/Pages/CurriculumComponent.razor
@@ -1,7 +1,11 @@
 @page "/Curriculum"
 
 <BootstrapHeroComponent BackgroundImage="delta-nilo" CustomTitle="CURRICULUM" />
-
+<style>
+    h5 {
+        margin-bottom: 5px !important;
+    }
+</style>
 <div class="row p-top p-bottom">
     <div class="col-md-4">
         <img src="https://via.placeholder.com/300x450" class="image-responsive">
