--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -1,45 +1,39 @@
 @page "/Fenchurch"
 
-<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución a medida de las necesidades de nuestro cliente basada en nuestra experiencia en fusiones y adquisiciones"/>
+<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución en función de las necesidades de cada cliente"/>
 
-<section class="container p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
+<section class="container-fluid p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
         <div class="col-md-4">
-            <div class="m-xl">
-                <h4>
-                    <strong>CLIENTES</strong>
-                </h4>
-                <p class="texe-center">
-                                        Fenchurch se especializa en asesorar a empresas
-                    medianas que quieren ser compradas. Estas empresas
-                    generalmente tiene una facturación de entre €15 millones
-                    y €300 millones
-                </p>
-            </div>
+            <h4>
+                <strong>CLIENTES</strong>
+            </h4>
+            <p class="texe-center">
+                                    Fenchurch se especializa en asesorar a empresas
+                medianas que quieren ser compradas. Estas empresas
+                generalmente tienen una facturación de entre €15 millones
+                y €300 millones
+            </p>
         </div>
         <div class="col-md-4">
-            <div class="m-xl">
-                <h4>
-                    <strong>FUSIONES & ADQUISICIONES</strong>
-                </h4>
-                <p class="text-justified">
-                    Fenchurch no hace salidas a bolsa, no gestiona patrimonios,
+            <h4>
+                <strong>FUSIONES & ADQUISICIONES</strong>
+            </h4>
+            <p class="text-justified">
+                Fenchurch no hace salidas a bolsa, no gestiona patrimonios,
 no hace préstamos, no hace estudios estratégicos, no audita,
 ni asesora en temas legales o fiscales.
-                </p>
-                <p>
+            </p>
+            <p>
 Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones
-                </p>
-            </div>
+            </p>
         </div>
         <div class="col-md-4">
-            <div class="m-xl">
-                <h4>
-                    <strong>NUESTRO ENFOQUE</strong>
-                </h4>
-                <p>Cada fase del proceso de nuestras operaciones están 
-ejecutadas por un profesional con una extensa experiencia práctica.</p>
-            </div>
+            <h4>
+                <strong>NUESTRO ENFOQUE</strong>
+            </h4>
+            <p>Cada fase del proceso de nuestras operaciones está 
+ejecutada por un profesional con una extensa experiencia práctica.</p>
         </div>
     </div>
 </section>
