--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -1,36 +1,53 @@
 @page "/VentaEmpresas"
 
-<BootstrapHeroComponent  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="Nuestro objetivo en cada encargo de venta es preparar a nuestro cliente para el rigor de un proceso disciplinado para conseguir el resultado óptimo. Fenchurch aporta décadas de experiencia a sus clientes para guiarles a través de cada fase del proceso." />
+<BootstrapHeroComponent  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="La venta de una empresa no es como vender un piso
+Está en juego el patrimonio del empresario
+Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de conseguir el mejor precio posible" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <h4>
-                PREPARACIÓN
+                1. PREPARACIÓN
             </h4>
             <p>
-                Comprender los objetivos de nuestro cliente - personales, financieros, el timing, expectativas de valoración - para asegurar que el proceso está listo para ser ejecutado. Preparar la documentación de marketing a medida para la situación y compradores específicos.
+                Definir con claridad el tipo de transacción que los accionistas buscan - ¿Venta Total o Parcial? ¿Ampliación de Capital? ¿Incluir o excluir los inmuebles de la operación? etc., etc.
             </p>
             <br>
         </div>
-        <div class="col-md-6">
-            <h4>MARKETING</h4>
+        <div class="col-md-4">
+            <h4>2. MARKETING</h4>
             <p>
-                Identificar y contactar con los compradores estratégicos y financieros, tanto nacionales como extranjeros, manteniendo la confidencialidad del proceso. Transmitir con claridad y concisión las razones por las que la empresa de nuestro cliente encaja a la perfección con con los criterios de adquisición de cada comprador.
+                Redactar un Perfil Ciego y un Cuaderno de Venta.
             </p>
             <br>
         </div>
-        <div class="col-md-6">
-            <h4>DUE DILIGENCE</h4>
+        <div class="col-md-4">
+            <h4>3. VALORAR <span style="text-transform:none">a la</span> EMPRESA</h4>
             <p>
-                Gestionar todos los aspectos del Due Diligence para minimizarlas distracciones, permitiendo que el empresario se pueda concentrar en dirigir la empresa.
+                Establecer un equilibrio un rango de valoración que permita encontrar un equilibrio entre el precio demandado por los accionistas y el precio que está dispuesto a pagar el comprador.
             </p>
             <br>
         </div>
-        <div class="col-md-6">
+    </div>
+    <div class="row">
+        <div class="col-md-4">
             <h4>
-                NEGOCIACIONES & CIERRE
+                4. IDENTIFICAR <span style="text-transform:none">al</span> MEJOR COMPRADOR
             </h4>
-            <p>Recibir las ofertas y negociar el mejor valor y condiciones de la operación para satisfacer los objetivos de nuestro cliente.</p><br>
+            <p>Fenchurch utiliza todos sus recursos para acceder al máximo número de compradores potenciales: estratégicos y financieros, tanto nacionales como extranjeros, siempre manteniendo la confidencialidad del proceso.</p>
+        </div>
+        <div class="col-md-4">
+            <h4>
+                5. DUE DILIGENCE
+            </h4>
+            <p>Gestionar todos los aspectos del Due Diligence para minimizar las distracciones, permitiendo que el empresario se pueda concentrar en dirigir la empresa.</p>
+        </div>
+        <div class="col-md-4">
+            <h4>
+                6. NEGOCIACIONES <span style="text-transform:none">y</span> CIERRE
+            </h4>
+            <p>Recibir todas las ofertas y negociar para conseguir la oferta más atractiva para nuestro cliente.</p>
+            <br>
         </div>
     </div>
 </div>
