--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -14,7 +14,8 @@
 								<div class="row">
 									<div class="col-md-4 col-md-push-4 text-center">
 										<div id="qbootstrap-logo">
-											<a href="/">
+											<a href="/" style="position:relative">
+											@* <img src="/img/logo_25.png" height="80" style="background-color: red;position:absolute;top:25px !important;left:-89px !important;"> *@
 												<div class="text-center">
 													<span class="anagrama small titulo-anagrama">FENCHURCH</span>
 												</div>
@@ -56,10 +57,7 @@
 										<a href="/Operaciones">Operaciones</a>
 									</li>
 									<li class="has-dropdown">
-										<a href="articulos.html">Artículos</a>
-									</li>
-									<li class="has-dropdown">
-										<a href="#">Preguntas</a>
+										<a href="#">Apuntes</a>
 									</li>
 									<li class="has-dropdown">
 										<a href="/Contacto">Contacto</a>
