--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -1,6 +1,6 @@
 @page "/VentaEmpresas"
 
-<BootstrapHeroComponent  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="La venta de una empresa no es como vender un piso
+<BootstrapHeroComponent  BackgroundImage="venta-empresas-bg"  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="La venta de una empresa no es como vender un piso
 Está en juego el patrimonio del empresario
 Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de conseguir el mejor precio posible" />
 <div class="container texto-cajas p-top">
@@ -24,7 +24,7 @@ Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de
         <div class="col-md-4">
             <h4>3. VALORAR <span style="text-transform:none">a la</span> EMPRESA</h4>
             <p>
-                Establecer un equilibrio un rango de valoración que permita encontrar un equilibrio entre el precio demandado por los accionistas y el precio que está dispuesto a pagar el comprador.
+                Establecer un rango de valoración que permita encontrar un equilibrio entre el precio demandado por los accionistas y el precio que está dispuesto a pagar el comprador.
             </p>
             <br>
         </div>
