--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -46,7 +46,7 @@
 										</ul>									
 									</li>
 									<li class="has-dropdown">
-										<a href="#">Red Internacional</a>
+										<a href="/RedInternacional">Red Internacional</a>
 										<!-- <ul class="dropdown">
 										<li><a href="#">Serv 1</a></li>
 										<li><a href="#">Serv 2</a></li>
